--- a/eksamen/public/html/opretNyBruger.html
+++ b/eksamen/public/html/opretNyBruger.html
@@ -18,24 +18,27 @@
 </head>
 <body>
     <h1>Opret ny bruger i systemet</h1>
-    <p style="margin-bottom: 35px;">Udfyld formularen herunder for at tilføje en ny bruger til systemet.</p>
-    <!-- POST request der håndteres i konti.js -->
-    <form action="../konti/post" method="post">
-        <label class="label">ID</label>
-        <input class="inputField" type="number" placeholder="F.eks. 10" name="Uid" required><br>
-        <label class="label">Medarbejder i banken</label>
-        <input type="radio" name="medarbejder" value="true" checked> Ja<br>
-        <input type="radio" name="medarbejder" value="false"> Nej<br>
-        <label class="label">Kunde i banken</label>
-        <input type="radio" name="kunde" value="true" checked> Ja<br>
-        <input type="radio" name="kunde" value="false"> Nej<br>
-        <label class="label">Fulde navn</label>
-        <input class="inputField" type="text" placeholder="F.eks. Frans Fransen" name="fuldenavn" required><br>
-        <label class="label">Kodeord</label>
-        <input class="inputField" type="password" placeholder="Vælg et kodeord" name="kodeord" required><br>
-        <br>
-        <button class="submitBtn" type="submit">Opret bruger</button>
-    </form>
-    <a href="/"><button class="submitBtn" style="margin-left: 10px;">Gå til index-siden</button></a>
+    <p>Udfyld formularen herunder for at tilføje en ny bruger til systemet.</p>
+    <p>Såfremt brugeren har en konto i banken, kan disse oplysninger tilknyttes senere.</p>
+    <div class="formDiv">
+        <!-- POST request der håndteres i konti.js -->
+        <form action="../konti/post" method="post">
+            <label class="label">ID</label>
+            <input class="inputField" type="number" placeholder="F.eks. 10" name="Uid" required><br>
+            <label class="label">Medarbejder i banken</label>
+            <input type="radio" name="medarbejder" value="true" checked> Ja<br>
+            <input type="radio" name="medarbejder" value="false"> Nej<br>
+            <label class="label">Kunde i banken</label>
+            <input type="radio" name="kunde" value="true" checked> Ja<br>
+            <input type="radio" name="kunde" value="false"> Nej<br>
+            <label class="label">Fulde navn</label>
+            <input class="inputField" type="text" placeholder="F.eks. Frans Fransen" name="fuldenavn" required><br>
+            <label class="label">Kodeord</label>
+            <input class="inputField" type="password" placeholder="Vælg et kodeord" name="kodeord" required><br>
+            <br>
+            <button class="submitBtn" type="submit">Opret bruger</button>
+        </form>
+        <a href="/"><button class="submitBtn" style="margin-left: 10px;">Gå til index-siden</button></a><br><br>
+    </div>
 </body>
 </html>
