--- a/dokumenter/htmlTable.html
+++ b/dokumenter/htmlTable.html
@@ -15,33 +15,8 @@
     <meta name="description" content="Viser en oversigt over alle konti i systemet.">
     <meta name="author" content="Daniel Lyck">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Internal Styling -->
-    <style>
-    body {
-        margin: 30px;
-        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        text-shadow: 0 0 2px rgb(185, 185, 185);
-        background-color: rgb(231, 241, 231);
-    }
-    table {
-        border-collapse: collapse; /* Smelter sammen til én border */
-        width: 100%;
-        box-shadow: 3px 3px 10px rgb(145, 145, 145);
-    }
-    th, td {
-        border: 1px solid rgb(0, 0, 0);
-        text-align: left;
-        padding: 10px;
-    }
-    th {
-        color: rgb(255, 255, 255);
-        background-color: rgb(0, 0, 0);
-    }
-    td {
-        color: rgb(0, 0, 0);
-        background-color: rgb(238, 238, 238);
-    }
-    </style>
+    <!-- Styling -->
+    <link rel="stylesheet" href="../eksamen/public/stylesheets/style.css">
 </head>
 <body>
     <h1>Tabel over alle registrerede konti i systemet</h1>
