Renaming og formatering.

--- a/eksamen/public/html/statiskTableView.html
+++ b/eksamen/public/html/statiskTableView.html
@@ -2,7 +2,7 @@
     Dette HTML-dokument indeholder mit første udkast til
     layout af et samlet overblik over konti i banksystemet.
 
-    Bemærk: Alt er hardcoded dummy-data.
+    Bemærk: Alt er statisk hardcoded dummy-data.
 -->
 
 <!-- HTML5 -->
