--- a/eksamen/public/html/dummyLogin.html
+++ b/eksamen/public/html/dummyLogin.html
@@ -1,5 +1,5 @@
 <!--
-    Dette HTML-dokument indeholder et Dummy-Login.
+    Dette HTML-dokument indeholder et dummy-login.
     Bemærk: Alt er hardcoded dummy-data.
 -->
 
