--- a/eksamen/public/html/statiskTableView.html
+++ b/eksamen/public/html/statiskTableView.html
@@ -10,13 +10,13 @@
 <html lang="da-DK">
 <head>
     <meta charset="UTF-8">
-    <title>BEC Bank | Liste over konti i systemet</title>
+    <title>BEC Bank | Tabel over alle konti i systemet</title>
     <!-- Meta Content -->
     <meta name="description" content="Viser en oversigt over alle konti i systemet.">
     <meta name="author" content="Daniel Lyck">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styling -->
-    <link rel="stylesheet" href="../eksamen/public/stylesheets/style.css">
+    <link rel="stylesheet" href="../stylesheets/style.css">
 </head>
 <body>
     <h1>Tabel over alle registrerede konti i systemet</h1>
@@ -66,5 +66,13 @@
             <td>777</td>
         </tr>
     </table>
+    <br>
+    <!-- Navigation -->
+    <nav>
+        <ul>
+            <li><a href="/">Gå til index-siden</a>.</li>
+            <li><a href="../konti">Se tabel med data fra DB</a>.</li>
+        </ul>
+    </nav>
 </body>
 </html>
